# dns

./: .gitignore  Cargo.toml  LICENSE  README.md
.docs/: dns-spec.md  installation.md  operations.md
.github/workflows/: ci.yml
config/: config.toml
config/zones/: example.cern.ch.zone
crates/dns-api/: Cargo.toml
crates/dns-api/src/: health.rs  lib.rs  metrics.rs  routes.rs
crates/dns-authority/: Cargo.toml
crates/dns-authority/src/: lib.rs  loader.rs  lookup.rs  negative.rs  zone.rs  zone_store.rs
crates/dns-config/: Cargo.toml
crates/dns-config/src/: config.rs  lib.rs  validation.rs
crates/dns-dnssec/: Cargo.toml
crates/dns-dnssec/src/: keys.rs  lib.rs  nsec.rs  signer.rs  verifier.rs
crates/dns-protocol/: Cargo.toml
crates/dns-protocol/src/: edns.rs  lib.rs  message.rs  name.rs  opcode.rs  record.rs  serialize.rs
crates/dns-resolver/: Cargo.toml
crates/dns-resolver/src/: cache.rs  dedup.rs  lib.rs  qname_min.rs  resolver.rs  upstream.rs  validator.rs
crates/dns-router/: Cargo.toml
crates/dns-router/src/: acl.rs  lib.rs  response.rs  router.rs  rrl.rs
crates/dns-server/: Cargo.toml
crates/dns-server/benches/: cache.rs  lookup.rs  parsing.rs  scaling.rs  throughput.rs  throughput_mixed.rs
crates/dns-server/src/: main.rs  shutdown.rs
crates/dns-server/tests/: acl_test.rs  auth_test.rs  cache_test.rs  dnssec_test.rs  reload_test.rs  rrl_test.rs
crates/dns-transport/: Cargo.toml
crates/dns-transport/src/: doh.rs  dot.rs  lib.rs  rate_limit.rs  tcp.rs  udp.rs
dev/bench/: data.js
