[package]
name = "dns-transport"
version.workspace = true
edition.workspace = true

[dependencies]
dns-protocol = { path = "../dns-protocol" }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
bytes = { workspace = true }
axum = { workspace = true }
hickory-proto = { workspace = true }
dashmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
rustls-pki-types = { workspace = true }
